Archive2/21/98997aac19a121/output
a.cpp:4:1: error: expected unqualified-id before '-' token
 -;
 ^
a.cpp: In function 'std::ostream& operator<<(std::ostream&, const std::vector<T>&)':
a.cpp:10:26: error: expected primary-expression before ';' token
         os << el << ' ';-;
                          ^
a.cpp: In function 'int main()':
a.cpp:19:8: error: expected primary-expression before ';' token
     };-;
        ^
a.cpp: At global scope:
a.cpp:21:2: error: expected unqualified-id before '-' token
 }-;
  ^
bash: line 9: ./a.out: No such file or directory
